# starwars_explorer

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
explorer/: admin.py  models.py  urls.py  views.py
explorer/migrations/: 0001_initial.py  0002_rename_collectionmodel_collection.py  0003_collection_file.py
explorer/services/: collections.py  processing.py  swapi.py
explorer/templates/explorer/: base.html  collection_detail.html  collection_list.html  collection_value_count.html
explorer/tests/: conftest.py  test_collection_list_view.py  test_collections_service.py  test_dummy.py  test_processing_service.py
starwars_explorer/: asgi.py  settings.py  urls.py  wsgi.py
